feat: admin list & delete non-vtuber
